<resources>
    <string name="app_name">Yourhub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_forum">Forum</string>
    <string name="title_events">Events</string>
    <string name="title_news">News</string>
    <string name="title_user">You</string>

    <string name="upvote">Like</string>
    <string name="comment">Comment</string>
    <string name="answer">Answer</string>
    <string name="write">Write Answer</string>
    <string name="share">Share</string>
    <string name="title">Title</string>
    <string name="title_post">Title of Your Post</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="header">Sell your item</string>
    <string name="price">Price</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="year">Year</string>
    <string name="condition">Condition</string>
    <string name="km">Kilometers</string>
    <string name="transmission">Transmission Type</string>

    <string name="facebook_app_id">730894370399195</string>
    <string-array name="category_array">
        <item>Vehicle</item>
        <item>Properties</item>
        <item>Mobile Phones</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Pets</item>
        <item>Jobs</item>
        <item>Services</item>
    </string-array>
    <string-array name="type_array">
        <item>Question</item>
        <item>Jokes</item>
        <item>Article</item>
    </string-array>
    <string-array name="states_array">
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
    </string-array>
    <string-array name="states_array2">
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
        <item>Al Fahaheel</item>
        <item>Al Ahmadi</item>
        <item>Kuwait City</item>
        <item>Salmiya</item>
        <item>Dasman</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_phone">Phone</string>
    <string name="action_sign_in">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_creact_account">Sign in</string>
    <string name="title_activity_forum_main">ForumMainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_forum_display">ForumDisplayActivity</string>

    <string name="title_activity_imagescreen">ImagescreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="business">
        <item>Business</item>
        <item>Non Profit</item>
        <item>Consulting services</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="paste_your_link">Paste Your Link</string>
    <string name="title_activity_home">Yourhub</string>
    <string name="title_activity_classified_home">ClassifiedHomeActivity</string>
    <string name="website_link">Website Link</string>
    <string name="title_activity_forum_home">ForumHomeActivity</string>
    <string name="title_activity_advert">AdvertActivity</string>

    <string name="hello_world">Hello world!</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-6269977085833958~4670154550</string>



    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">731406793681286</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb731406793681286</string>
</resources>
