<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:src="@drawable/cartoon"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey_100"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@color/grey_100"
                app:srcCompat="@drawable/ic_add_photo"
                android:tint="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                />

            <ImageButton
                android:id="@+id/gallery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:padding="10dp"
                app:srcCompat="@drawable/ic_image_black_24dp"
                android:tint="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_title"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/ad_name"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_description"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/ad_desc"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourth_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_price"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Price"
            android:inputType="numberDecimal"
            android:id="@+id/ad_price"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/third_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_my_location"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:id="@+id/ad_location"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sub_btn"
        android:layout_gravity="bottom"
        android:text="Post"
        android:layout_margin="5dp"
        android:background="@color/cyan_400"/>
</LinearLayout>