<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_layout"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textAlignment="center"
            android:src="@drawable/ic_add_photo"
            android:id="@+id/img_event"
            android:layout_margin="5dp"
            android:layout_below="@+id/text_tap"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_title"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:id="@+id/name"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_description"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:id="@+id/desc_event"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/third_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_my_location"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:id="@+id/locc_event"
            android:layout_weight=".70"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fourth_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_insert_invitation_black_24dp"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Date"
            android:focusable="false"
            android:id="@+id/date_event"
            android:layout_weight=".70"
            android:inputType="date"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fifth_event"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/img_scroll"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_access_alarm_black_24dp"
            android:layout_margin="5dp"
            android:padding="2dp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="starts"
            android:gravity="center"
            android:id="@+id/start_event"
            android:layout_weight=".70"
            android:inputType="time"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="ends"
            android:gravity="center"
            android:id="@+id/ends_event"
            android:layout_weight=".70"
            android:inputType="time"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_clear"
            android:visibility="gone"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sub_btn"
        android:text="Submit"
        android:layout_margin="5dp"
        android:background="@color/cyan_400"/>
</LinearLayout>